unpackaged/main/default/objects/CRM_Project__c/CRM_Project__c.object-meta.xml
<CustomObject>
    <label>Customer Project</label>
    <nameField>
        <label>Customer Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>