unpackaged/main/default/objects/CRM_Project__c/fields/Account_Plant_relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Plant_relationship_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plant Name</label>
    <referenceTo>Account_Plant__c</referenceTo>
    <relationshipLabel>CRM Project</relationshipLabel>
    <relationshipName>CRM_Project</relationshipName>
    <type>Lookup</type>
</CustomField>