unpackaged/main/default/objects/CRM_Project__c/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <label>Actual End Date</label>
    <type>DateTime</type>
</CustomField>