unpackaged/main/default/objects/CRM_Project__c/fields/Approval_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Submitted_Date__c</fullName>
    <description>This is hidden field to run the flow when approval is submitted</description>
    <label>Approval Submitted Date</label>
    <type>DateTime</type>
</CustomField>