unpackaged/main/default/objects/CRM_Project__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <label>ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>