unpackaged/main/default/objects/CRM_Project__c/fields/Baseline_hours__c.field-meta.xml
<CustomField>
    <fullName>Baseline_hours__c</fullName>
    <label>Baseline hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>