unpackaged/main/default/objects/CRM_Project__c/fields/Bug_Link__c.field-meta.xml
<CustomField>
    <fullName>Bug_Link__c</fullName>
    <label>Bug Link</label>
    <type>Url</type>
</CustomField>