unpackaged/main/default/objects/CRM_Project__c/fields/Calculated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_End_Date__c</fullName>
    <label>Calculated End Date</label>
    <type>Date</type>
</CustomField>