unpackaged/main/default/objects/CRM_Project__c/fields/Calculated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Start_Date__c</fullName>
    <label>Calculated Start Date</label>
    <type>Date</type>
</CustomField>