unpackaged/main/default/objects/CRM_Project__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>CRM Project</relationshipLabel>
    <relationshipName>CRM_Project</relationshipName>
    <type>Lookup</type>
</CustomField>