unpackaged/main/default/objects/CRM_Project__c/fields/Cost_Performance_Index__c.field-meta.xml
<CustomField>
    <fullName>Cost_Performance_Index__c</fullName>
    <label>Cost Performance Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>