unpackaged/main/default/objects/CRM_Project__c/fields/Cost_Variance__c.field-meta.xml
<CustomField>
    <fullName>Cost_Variance__c</fullName>
    <label>Cost Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>