unpackaged/main/default/objects/CRM_Project__c/fields/CRM_Reference_Project__c.field-meta.xml
<CustomField>
    <fullName>CRM_Reference_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link between Project and CRM Project</description>
    <label>CRM Reference Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>CRM Project (CRM Reference Project)</relationshipLabel>
    <relationshipName>CRM_Project1</relationshipName>
    <type>Lookup</type>
</CustomField>