unpackaged/main/default/objects/CRM_Project__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CRM Project</relationshipLabel>
    <relationshipName>CRM_Project</relationshipName>
    <type>Lookup</type>
</CustomField>