unpackaged/main/default/objects/CRM_Project__c/fields/Customer_s_Integrator__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Integrator__c</fullName>
    <label>Customer&#39;s Integrator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trekkor</fullName>
            </value>
            <value>
                <fullName>Norcal</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>