unpackaged/main/default/objects/CRM_Project__c/fields/Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Date__c</fullName>
    <description>Auto-Populated - First time only when Internal Status changes to Completed, Completed - Work Open or Completed - historical data import.</description>
    <label>Deployment Date</label>
    <type>Date</type>
</CustomField>