unpackaged/main/default/objects/CRM_Project__c/fields/Earned_Value__c.field-meta.xml
<CustomField>
    <fullName>Earned_Value__c</fullName>
    <label>Earned Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>