unpackaged/main/default/objects/CRM_Project__c/fields/Estimate_at_Completion__c.field-meta.xml
<CustomField>
    <fullName>Estimate_at_Completion__c</fullName>
    <label>Estimate at Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>