unpackaged/main/default/objects/CRM_Project__c/fields/Estimate_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Estimate_to_Complete__c</fullName>
    <label>Estimate to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>