unpackaged/main/default/objects/CRM_Project__c/fields/Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours__c</fullName>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>