unpackaged/main/default/objects/CRM_Project__c/fields/Formula_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Formula_Approval_Status__c</fullName>
    <formula>TEXT( Approval_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Approval Status</label>
    <type>Text</type>
</CustomField>