unpackaged/main/default/objects/CRM_Project__c/fields/GB_Jira_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>GB_Jira_Legacy_ID__c</fullName>
    <label>GB Jira Legacy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>