unpackaged/main/default/objects/CRM_Project__c/fields/Health_Reason__c.field-meta.xml
<CustomField>
    <fullName>Health_Reason__c</fullName>
    <label>Health Reason</label>
    <type>TextArea</type>
</CustomField>