unpackaged/main/default/objects/CRM_Project__c/fields/Health_Traffic_Light__c.field-meta.xml
<CustomField>
    <fullName>Health_Traffic_Light__c</fullName>
    <formula>IMAGE(
CASE( Project_Health__c ,
&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;Health Status&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health (Traffic Light)</label>
    <type>Text</type>
</CustomField>