unpackaged/main/default/objects/CRM_Project__c/fields/Installation_fee__c.field-meta.xml
<CustomField>
    <fullName>Installation_fee__c</fullName>
    <label>Installation fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>