unpackaged/main/default/objects/CRM_Project__c/fields/Internal_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Status__c</fullName>
    <label>Internal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbox</fullName>
            </value>
            <value>
                <fullName>Info collection</fullName>
            </value>
            <value>
                <fullName>Under construction / backlogged</fullName>
            </value>
            <value>
                <fullName>To Do</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Blocked - Internal</fullName>
            </value>
            <value>
                <fullName>Blocked - Customer</fullName>
            </value>
            <value>
                <fullName>Blocked - 3rd party</fullName>
            </value>
            <value>
                <fullName>Quality Checking</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Completed - work open</fullName>
            </value>
            <value>
                <fullName>Completed - historical data import</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Backlog</fullName>
                <isActive>false</isActive>
                <label>Backlog</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <isActive>false</isActive>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>Done</fullName>
                <isActive>false</isActive>
                <label>Done</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Selected for Development</fullName>
                <isActive>false</isActive>
                <label>Selected for Development</label>
            </value>
            <value>
                <fullName>Under Spec</fullName>
                <isActive>false</isActive>
                <label>Under Spec</label>
            </value>
            <value>
                <fullName>Waiting</fullName>
                <isActive>false</isActive>
                <label>Waiting</label>
            </value>
            <value>
                <fullName>Won&#39;t do</fullName>
                <isActive>false</isActive>
                <label>Won&#39;t do</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>