unpackaged/main/default/objects/CRM_Project__c/fields/Methodology__c.field-meta.xml
<CustomField>
    <fullName>Methodology__c</fullName>
    <label>Methodology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kanban</fullName>
            </value>
            <value>
                <fullName>Waterfall</fullName>
            </value>
            <value>
                <fullName>Water-Scrum-Fall</fullName>
            </value>
            <value>
                <fullName>Checklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>