unpackaged/main/default/objects/CRM_Project__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>We have created this field as per the Data dictionary Update to add in the list view this will not be used in the Page Layout</description>
    <formula>Owner:User.FirstName  +&#39; &#39;+  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>