unpackaged/main/default/objects/CRM_Project__c/fields/PF_Jira_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>PF_Jira_Legacy_ID__c</fullName>
    <label>PF Jira Legacy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>