unpackaged/main/default/objects/CRM_Project__c/fields/Planned_Value__c.field-meta.xml
<CustomField>
    <fullName>Planned_Value__c</fullName>
    <label>Planned Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>