unpackaged/main/default/objects/CRM_Project__c/fields/Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Name__c</fullName>
    <formula>Account_Plant_relationship_Name__r.Plant_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant Name</label>
    <type>Text</type>
</CustomField>