unpackaged/main/default/objects/CRM_Project__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Name</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>CRM Project</relationshipLabel>
    <relationshipName>CRM_Project</relationshipName>
    <type>Lookup</type>
</CustomField>