unpackaged/main/default/objects/CRM_Project__c/fields/Project_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Project_Start_date__c</fullName>
    <label>Project Start date</label>
    <type>DateTime</type>
</CustomField>