unpackaged/main/default/objects/CRM_Project__c/fields/Project_visibility__c.field-meta.xml
<CustomField>
    <fullName>Project_visibility__c</fullName>
    <label>Project visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visible to customer</fullName>
            </value>
            <value>
                <fullName>Not visible to customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>