unpackaged/main/default/objects/CRM_Project__c/fields/Related_Projects__c.field-meta.xml
<CustomField>
    <fullName>Related_Projects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloud Coach Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>CRM Project</relationshipLabel>
    <relationshipName>CRM_Project</relationshipName>
    <type>Lookup</type>
</CustomField>