unpackaged/main/default/objects/CRM_Project__c/fields/Resourcing_Mode__c.field-meta.xml
<CustomField>
    <fullName>Resourcing_Mode__c</fullName>
    <label>Resourcing Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Load Based</fullName>
            </value>
            <value>
                <fullName>Quick Assign</fullName>
            </value>
            <value>
                <fullName>Time Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>