unpackaged/main/default/objects/CRM_Project__c/fields/Schedule_Variance__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Variance__c</fullName>
    <label>Schedule Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>