unpackaged/main/default/objects/CRM_Project__c/fields/Status_comment__c.field-meta.xml
<CustomField>
    <fullName>Status_comment__c</fullName>
    <label>Status comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>