unpackaged/main/default/objects/CRM_Project__c/fields/Ticket_Link__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Link__c</fullName>
    <label>Ticket Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>