unpackaged/main/default/objects/CRM_Project__c/fields/To_Complete_Performance_Index__c.field-meta.xml
<CustomField>
    <fullName>To_Complete_Performance_Index__c</fullName>
    <label>To Complete Performance Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>