unpackaged/main/default/objects/CRM_Project__c/fields/Validation_Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Validation_Report_URL__c</fullName>
    <description>CRM Project has a URL field that can hold a link to the validation report on the monitoring platform.</description>
    <label>Validation Report URL</label>
    <type>Url</type>
</CustomField>