unpackaged/main/default/objects/CRM_Project__c/fields/Variance_at_Completion__c.field-meta.xml
<CustomField>
    <fullName>Variance_at_Completion__c</fullName>
    <label>Variance at Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>