unpackaged/main/default/objects/CRM_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plant_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>